--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 			<div class="container">
 			<div class="about">
 			<div class="about-author">
-				<img src="Media/IMG_1290.jpg"
+				<img src="IMG_1290.jpg"
 				height="250px" width="250px">
 					
 					
